<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <ImageView
        android:id="@+id/imageviewspin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/images" />

    <Button
        android:id="@+id/imageview_pan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#13B8FF"
        android:drawableTop="@drawable/hand"
        android:padding="5dp"
        android:text="@string/pan"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_Back_Camera"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@id/imageviewspin"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_green"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/img_save"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_green"
            android:text="@string/save"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/img_delete"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_green"
            android:text="@string/dlt"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/img_share"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_green"
            android:text="@string/share"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/img_zoom"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_green"
            android:text="@string/zoom"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>