<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <ImageView
        android:id="@+id/full_image_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/images" />

    <Button
        android:id="@+id/imageview_pan_all_spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#13B8FF"
        android:drawableTop="@drawable/hand"
        android:padding="5dp"
        android:text="@string/pan"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_home"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@id/full_image_view"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/bg_green"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll011"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" 
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/img_share_spin_view"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_green"
            android:text="@string/share"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/img_delete_spin_view"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_green"
            android:text="@string/dlt"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/image_zoom"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_green"
            android:text="@string/zoom"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>